--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "ibm-cloud-sdk-core": "^2.4.2",
+    "ibm-watson": "^5.6.1",
+    "morgan": "^1.10.0",
+    "watson-developer-cloud": "^4.0.1"
   },
   "engines": {
     "node": ">=12.0.0",
